Implement expanded messaging framework with deeper storytelling
- Add new pricing page with transparent pricing structure ( initial,  follow-ups, /month)
- Update homepage with 'Why Choose MoodPath MD?' section and patient stories
- Enhance About page with new philosophy and values messaging
- Reorganize FAQ page with updated general questions
- Add navigation links to pricing and PHQ-9 tracker
- Implement 'Clarity. Confidence. Care.' brand positioning
- Add compelling value propositions: long wait times, accessibility, whole-patient care
- Update process steps to 'Book Online → Meet Your Doctor → Start Feeling Better'
- Maintain clinical warmth design system throughout

--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
                     <li><a href="#approach">Our Approach</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="about.html">About</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="resources.html">Resources</a></li>
                     <li><a href="phq9-tracker.html">PHQ-9 Tracker</a></li>
@@ -293,14 +294,13 @@
             <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h1>You deserve care that truly sees you.</h1>
-                    <p class="subtitle">
-                        Thoughtful online support for depression that considers your whole health story — 
-                        because sometimes the answer isn't just in your mind.
-                    </p>
-                    <a href="screening.html" class="btn btn-primary">
-                        See if this feels right
-                    </a>
+                    <h1>Clarity. Confidence. Care.</h1>
+                <p class="subtitle">
+                    Professional online treatment for depression and anxiety, led by a board-certified physician.
+                </p>
+                <a href="screening.html" class="btn btn-primary">
+                    Book Your Consultation
+                </a>
                 </div>
             </div>
         </section>
@@ -309,9 +309,9 @@
         <section class="seo-content" style="padding: 2rem 0; background: var(--white);">
             <div class="container">
                 <div style="max-width: 800px; margin: 0 auto; text-align: center;">
-                    <h2 style="color: var(--ocean-blue-dark); margin-bottom: 1rem;">Online Depression Treatment & Mental Health Care</h2>
+                    <h2 style="color: var(--ocean-blue-dark); margin-bottom: 1rem;">Online Depression & Anxiety Treatment</h2>
                     <p style="color: var(--warm-gray); font-size: 1rem; line-height: 1.6;">
-                        Get personalized <strong>depression treatment</strong> from a <strong>board-certified internist</strong> with expertise in <strong>mild-moderate depression</strong> and <strong>CBT therapy</strong>. Our <strong>online mental health</strong> services provide <strong>telehealth depression</strong> care, <strong>depression medication</strong> management, and <strong>cognitive behavioral therapy</strong> techniques. Whether you're seeking a <strong>depression doctor</strong>, <strong>antidepressant doctor</strong>, or <strong>depression specialist</strong>, we offer comprehensive <strong>mood disorder treatment</strong> through <strong>virtual psychiatrist</strong> consultations.
+                        MoodPath MD is a board-certified physician-led telehealth clinic for depression and anxiety. Offering professional, discreet care with evidence-based treatment, optional genomic testing, and transparent pricing. Available online in licensed states.
                     </p>
                 </div>
             </div>
@@ -325,16 +325,116 @@
             </p>
             <div class="approach-grid">
                 <div class="approach-card">
-                    <h3>Medical Training That Matters</h3>
-                    <p>Your care comes from a medical doctor who understands how your body affects your mood — thyroid, sleep, hormones, medications.</p>
+                    <h3>Professional Expertise</h3>
+                    <p>Care led by a board-certified internist who understands the connection between physical and emotional health.</p>
                 </div>
                 <div class="approach-card">
-                    <h3>Your DNA Holds Answers</h3>
-                    <p>Why do some people respond beautifully to certain antidepressants while others feel nothing? Your genetic makeup can reveal which medications your body processes best.</p>
+                    <h3>Compassionate & Discreet</h3>
+                    <p>Support that respects your privacy and your story.</p>
                 </div>
                 <div class="approach-card">
-                    <h3>Time to Listen</h3>
-                    <p>90-minute consultations allow us to understand your complete story — not just your symptoms, but your life, your health, and your goals.</p>
+                    <h3>Accessible & Transparent</h3>
+                    <p>Clear pricing, no hidden fees, and care available from the comfort of home.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Why Choose MoodPath MD Section -->
+    <section class="section" style="background: linear-gradient(135deg, rgba(44, 95, 124, 0.05) 0%, rgba(123, 160, 152, 0.1) 100%); padding: 4rem 0;">
+        <div class="container">
+            <h2 style="text-align: center; margin-bottom: 3rem;">Why Choose MoodPath MD?</h2>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 2rem;">
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">⏰ Long Wait Times</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6;">Psychiatrist appointments often take weeks or months. With MoodPath MD, most patients are seen within days.</p>
+                </div>
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">🏠 Accessibility</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6;">Your care is online, eliminating the stress of travel and scheduling around busy lives.</p>
+                </div>
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">👤 Whole-Patient Care</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6;">Too often, mental health treatment ignores medical contributors like thyroid disease, vitamin deficiencies, or medication side effects. As an internist, I evaluate the whole person.</p>
+                </div>
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">⏱️ Time Sink</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6;">Large platforms can feel impersonal and wasteful. Here, your time is respected, and each visit is efficient and focused.</p>
+                </div>
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">🧬 Precision Tools</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6;">For patients who don't respond to first-line treatment, optional genomic testing can guide medication selection and save months of trial and error.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Patient Stories Section -->
+    <section class="section" style="padding: 4rem 0; background: var(--white);">
+        <div class="container">
+            <h2 style="text-align: center; margin-bottom: 3rem;">Patient Stories</h2>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
+                <div style="background: linear-gradient(135deg, rgba(44, 95, 124, 0.05) 0%, rgba(123, 160, 152, 0.1) 100%); padding: 2rem; border-radius: 12px; border-left: 4px solid var(--ocean-blue);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">Sarah, 34</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6; font-style: italic;">"Waited 3 months to see a psychiatrist. With MoodPath MD, I was seen in 5 days and started treatment immediately."</p>
+                </div>
+                <div style="background: linear-gradient(135deg, rgba(44, 95, 124, 0.05) 0%, rgba(123, 160, 152, 0.1) 100%); padding: 2rem; border-radius: 12px; border-left: 4px solid var(--sage);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">James, 42</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6; font-style: italic;">"Spent years cycling through medications. Genomic testing at MoodPath MD helped find the right match in weeks, not years."</p>
+                </div>
+                <div style="background: linear-gradient(135deg, rgba(44, 95, 124, 0.05) 0%, rgba(123, 160, 152, 0.1) 100%); padding: 2rem; border-radius: 12px; border-left: 4px solid var(--sage-dark);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">Ava, 28</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6; font-style: italic;">"Felt rushed in prior visits. Here, I received a full evaluation that considered my physical health, work stress, and lifestyle."</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Why Choose MoodPath MD Section -->
+    <section class="section" style="background: linear-gradient(135deg, rgba(44, 95, 124, 0.05) 0%, rgba(123, 160, 152, 0.1) 100%); padding: 4rem 0;">
+        <div class="container">
+            <h2 style="text-align: center; margin-bottom: 3rem;">Why Choose MoodPath MD?</h2>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 2rem;">
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">⏰ Long Wait Times</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6;">Psychiatrist appointments often take weeks or months. With MoodPath MD, most patients are seen within days.</p>
+                </div>
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">🏠 Accessibility</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6;">Your care is online, eliminating the stress of travel and scheduling around busy lives.</p>
+                </div>
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">👤 Whole-Patient Care</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6;">Too often, mental health treatment ignores medical contributors like thyroid disease, vitamin deficiencies, or medication side effects. As an internist, I evaluate the whole person.</p>
+                </div>
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">⏱️ Time Sink</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6;">Large platforms can feel impersonal and wasteful. Here, your time is respected, and each visit is efficient and focused.</p>
+                </div>
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">🧬 Precision Tools</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6;">For patients who don't respond to first-line treatment, optional genomic testing can guide medication selection and save months of trial and error.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Patient Stories Section -->
+    <section class="section" style="padding: 4rem 0; background: var(--white);">
+        <div class="container">
+            <h2 style="text-align: center; margin-bottom: 3rem;">Patient Stories</h2>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
+                <div style="background: linear-gradient(135deg, rgba(44, 95, 124, 0.05) 0%, rgba(123, 160, 152, 0.1) 100%); padding: 2rem; border-radius: 12px; border-left: 4px solid var(--ocean-blue);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">Sarah, 34</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6; font-style: italic;">"Waited 3 months to see a psychiatrist. With MoodPath MD, I was seen in 5 days and started treatment immediately."</p>
+                </div>
+                <div style="background: linear-gradient(135deg, rgba(44, 95, 124, 0.05) 0%, rgba(123, 160, 152, 0.1) 100%); padding: 2rem; border-radius: 12px; border-left: 4px solid var(--sage);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">James, 42</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6; font-style: italic;">"Spent years cycling through medications. Genomic testing at MoodPath MD helped find the right match in weeks, not years."</p>
+                </div>
+                <div style="background: linear-gradient(135deg, rgba(44, 95, 124, 0.05) 0%, rgba(123, 160, 152, 0.1) 100%); padding: 2rem; border-radius: 12px; border-left: 4px solid var(--sage-dark);">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">Ava, 28</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6; font-style: italic;">"Felt rushed in prior visits. Here, I received a full evaluation that considered my physical health, work stress, and lifestyle."</p>
                 </div>
             </div>
         </div>
@@ -346,18 +446,18 @@
             <div class="steps-grid">
                 <div class="step-card">
                     <div class="step-number">1</div>
-                    <h3>Start Simply</h3>
-                    <p>A brief questionnaire to understand where you are and if we're the right fit for your needs.</p>
+                    <h3>Book Online</h3>
+                    <p>Select your consultation time and sign up with ease.</p>
                 </div>
                 <div class="step-card">
                     <div class="step-number">2</div>
-                    <h3>Connect Easily</h3>
-                    <p>Book a time that works, meet from wherever you feel comfortable. No commutes, no waiting rooms.</p>
+                    <h3>Meet Your Doctor</h3>
+                    <p>A thoughtful telehealth consultation, focused on you.</p>
                 </div>
                 <div class="step-card">
                     <div class="step-number">3</div>
-                    <h3>Be Understood</h3>
-                    <p>Your board-certified medical doctor takes time to see your full picture and create a personalized plan.</p>
+                    <h3>Start Feeling Better</h3>
+                    <p>Evidence-based treatment with clear follow-up.</p>
                 </div>
             </div>
         </div>
@@ -409,16 +509,28 @@
             <h2>Common Questions</h2>
             <div class="faq-grid">
                 <div class="faq-item">
-                    <h3>Isn't depression usually treated by psychiatrists?</h3>
-                    <p>Mild to moderate depression is most often first evaluated and managed by internists and primary care doctors. That's the standard of care. As a board-certified internist with specialized training in depression and CBT, I expand on this foundation with more time, targeted labs, and evidence-based treatment approaches.</p>
+                    <h3>Do you accept insurance?</h3>
+                    <p>Currently we are cash-pay only, with clear upfront pricing.</p>
                 </div>
                 <div class="faq-item">
-                    <h3>Do I need a primary care provider?</h3>
-                    <p>Yes, we require patients to have a PCP for comprehensive care coordination and medical emergencies. We work collaboratively with your PCP to ensure you receive the best possible care.</p>
+                    <h3>What ages do you treat?</h3>
+                    <p>Adults 18 and older.</p>
                 </div>
                 <div class="faq-item">
-                    <h3>How is this different from traditional therapy?</h3>
-                    <p>I provide comprehensive medical treatment for mild-moderate depression, combining medication management with CBT techniques. This integrated approach addresses both the biological and psychological aspects of depression, offering a more complete treatment solution than medication or therapy alone.</p>
+                    <h3>Can you prescribe medications?</h3>
+                    <p>Yes, as a licensed physician I can prescribe antidepressants and related medications if appropriate.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>How soon can I be seen?</h3>
+                    <p>Most new patients can book an appointment within a week.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>Do you treat bipolar disorder or psychosis?</h3>
+                    <p>No. We focus on mild to moderate depression and anxiety. Severe or complex conditions are referred to psychiatry.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>How do I pay?</h3>
+                    <p>Secure online payment is required at booking.</p>
                 </div>
             </div>
             <div style="text-align: center; margin-top: 3rem;">
