Reorganize Why Choose section into clean 2x3 grid layout
- Change to 2-column grid for better visual balance
- Add 'Transparent Pricing' box to complete the set
- Remove all centering styles for consistent alignment
- Create perfect 6-box layout with relevant content

--- a/index.html
+++ b/index.html
@@ -344,16 +344,16 @@
     <section class="section" style="background: linear-gradient(135deg, rgba(44, 95, 124, 0.05) 0%, rgba(123, 160, 152, 0.1) 100%); padding: 4rem 0;">
         <div class="container">
             <h2 style="text-align: center; margin-bottom: 3rem;">Why Choose MoodPath MD?</h2>
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 2rem;">
-                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1); grid-column: 1 / -1; max-width: 400px; justify-self: center;">
+            <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 2rem;">
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1); ">
                     <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">⏰ Long Wait Times</h3>
                     <p style="color: var(--warm-gray); line-height: 1.6;">Psychiatrist appointments often take weeks or months. With MoodPath MD, most patients are seen within days.</p>
                 </div>
-                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1); grid-column: 1 / -1; max-width: 400px; justify-self: center;">
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1); ">
                     <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">🏠 Accessibility</h3>
                     <p style="color: var(--warm-gray); line-height: 1.6;">Your care is online, eliminating the stress of travel and scheduling around busy lives.</p>
                 </div>
-                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1); grid-column: 1 / -1; max-width: 400px; justify-self: center;">
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1); ">
                     <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">👤 Whole-Patient Care</h3>
                     <p style="color: var(--warm-gray); line-height: 1.6;">Too often, mental health treatment ignores medical contributors like thyroid disease, vitamin deficiencies, or medication side effects. As an internist, I evaluate the whole person.</p>
                 </div>
@@ -361,11 +361,14 @@
                     <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">⏱️ Time Sink</h3>
                     <p style="color: var(--warm-gray); line-height: 1.6;">Large platforms can feel impersonal and wasteful. Here, your time is respected, and each visit is efficient and focused.</p>
                 </div>
-                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1); grid-column: 1 / -1; max-width: 400px; justify-self: center;">
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1); ">
                     <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">🧬 Precision Tools</h3>
                     <p style="color: var(--warm-gray); line-height: 1.6;">For patients who don't respond to first-line treatment, optional genomic testing can guide medication selection and save months of trial and error.</p>
                 </div>
-            </div>
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1); ">
+                    <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">💰 Transparent Pricing</h3>
+                    <p style="color: var(--warm-gray); line-height: 1.6;">No hidden fees or surprise bills. Clear upfront pricing: $249 initial consultation, $119 follow-ups, with optional $89/month membership plan.</p>
+                </div>            </div>
         </div>
     </section>
 
@@ -418,7 +421,7 @@
             </div>
             
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-bottom: 2rem;">
-                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1); grid-column: 1 / -1; max-width: 400px; justify-self: center;">
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1); ">
                     <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">📖 Free CBT Resources</h3>
                     <p style="color: var(--warm-gray); margin-bottom: 1.5rem;">Evidence-based online CBT program to complement your treatment.</p>
                     <a href="resources.html" style="display: inline-flex; align-items: center; gap: 0.5rem; background: var(--gradient-primary); color: white; padding: 0.75rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: 600; transition: all 0.3s ease;">
@@ -427,7 +430,7 @@
                     </a>
                 </div>
                 
-                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1); grid-column: 1 / -1; max-width: 400px; justify-self: center;">
+                <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1); ">
                     <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">📊 Track Your Progress</h3>
                     <p style="color: var(--warm-gray); margin-bottom: 1.5rem;">Monitor your mood with validated PHQ-9 assessments and share results with your care team.</p>
                     <a href="resources.html" style="display: inline-flex; align-items: center; gap: 0.5rem; background: var(--gradient-primary); color: white; padding: 0.75rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: 600; transition: all 0.3s ease;">
