--- a/index.html
+++ b/index.html
@@ -484,11 +484,11 @@
         </div>
     </section>
 
-    <section class="cta-section">
+    <section class="cta-section" style="background: var(--gradient-primary); color: white; text-align: center; padding: 4rem 0;">
         <div class="container">
-            <h2>Ready to feel better?</h2>
-            <p>Take our 2-minute fit check to see if MoodPath MD is right for you.</p>
-            <a href="screening.html" class="btn">
+            <h2 style="color: white; margin-bottom: 1rem; font-size: 2.5rem;">Ready to feel better?</h2>
+            <p style="color: rgba(255, 255, 255, 0.9); font-size: 1.125rem; margin-bottom: 2rem; max-width: 600px; margin-left: auto; margin-right: auto;">Take our 2-minute fit check to see if MoodPath MD is right for you.</p>
+            <a href="screening.html" class="btn" style="background: white; color: var(--ocean-blue); padding: 1rem 2rem; border-radius: 12px; text-decoration: none; font-weight: 600; display: inline-block; transition: all 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);">
                 Start Your Journey
             </a>
         </div>
