--- a/index.html
+++ b/index.html
@@ -494,13 +494,13 @@
         </div>
     </section>
 
-    <footer>
+    <footer style="background: var(--cream); padding: 3rem 0; border-top: 1px solid rgba(44, 95, 124, 0.1);">
         <div class="container">
-            <div class="emergency-note">
+            <div class="emergency-note" style="background: rgba(220, 38, 38, 0.1); border: 1px solid rgba(220, 38, 38, 0.2); padding: 1rem; border-radius: 8px; margin-bottom: 2rem; text-align: center;">
                 <strong>If you're in crisis:</strong> Please call 988 for immediate support.
             </div>
-            <p>&copy; 2024 MoodPath MD. Board-certified • State licensed • HIPAA compliant</p>
-            <p style="margin-top: 1rem; font-size: 0.875rem; opacity: 0.7;">
+            <p style="text-align: center; font-weight: 600; color: var(--ocean-blue-dark); margin-bottom: 1rem;"><p style="text-align: center; font-weight: 600; color: var(--ocean-blue-dark); margin-bottom: 1rem;"><p>&copy; 2024 MoodPath MD. Board-certified • State licensed • HIPAA compliant</p>copy; 2024 MoodPath MD. Board-certified • State licensed • HIPAA compliant</p>copy; 2024 MoodPath MD. Board-certified • State licensed • HIPAA compliant</p>
+            <p style="text-align: center; margin-top: 1rem; font-size: 0.875rem; opacity: 0.7; color: var(--warm-gray-light);">
                 Not for emergencies. Telehealth has limitations. Results vary.
             </p>
         </div>
