Enhance navigation and CSS formatting
- Update CSS version to v=8 for cache refresh
- Add explicit flexbox styling to navigation menu
- Ensure proper spacing and alignment for navigation items
- Improve overall formatting consistency

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Crimson+Text:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
     
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/clinical-warmth.css?v=7">
+    <link rel="stylesheet" href="css/clinical-warmth.css?v=8">
     
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -277,15 +277,15 @@
                     </svg>
                     <span class="logo-text">MoodPath MD</span>
                 </div>
-                <ul class="nav-menu">
-                    <li><a href="#approach">Our Approach</a></li>
-                    <li><a href="#how-it-works">How It Works</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="resources.html">Resources</a></li>
-                    <li><a href="phq9-tracker.html">PHQ-9 Tracker</a></li>
-                    <li><a href="screening.html" class="btn btn-primary" style="background: #2C5F7C !important; color: white !important; font-weight: 700 !important; text-shadow: 0 1px 2px rgba(0, 0, 0, 0.15) !important;">Get Started</a></li>
+                <ul class="nav-menu" style="display: flex; list-style: none; gap: 2.5rem; align-items: center; margin: 0; padding: 0;">
+                    <li style="margin: 0; padding: 0;"><a href="#approach">Our Approach</a></li>
+                    <li style="margin: 0; padding: 0;"><a href="#how-it-works">How It Works</a></li>
+                    <li style="margin: 0; padding: 0;"><a href="about.html">About</a></li>
+                    <li style="margin: 0; padding: 0;"><a href="pricing.html">Pricing</a></li>
+                    <li style="margin: 0; padding: 0;"><a href="faq.html">FAQ</a></li>
+                    <li style="margin: 0; padding: 0;"><a href="resources.html">Resources</a></li>
+                    <li style="margin: 0; padding: 0;"><a href="phq9-tracker.html">PHQ-9 Tracker</a></li>
+                    <li style="margin: 0; padding: 0;"><a href="screening.html" class="btn btn-primary" style="background: #2C5F7C !important; color: white !important; font-weight: 700 !important; text-shadow: 0 1px 2px rgba(0, 0, 0, 0.15) !important;">Get Started</a></li>
                 </ul>
             </div>
         </div>
