--- a/index.html
+++ b/index.html
@@ -291,7 +291,16 @@
         </div>
     </nav>
 
-            <section class="hero">
+    <!-- Crisis Disclaimer Box -->
+    <div style="background: rgba(220, 38, 38, 0.1); border: 2px solid rgba(220, 38, 38, 0.3); border-radius: 12px; padding: 1.5rem; margin: 2rem auto; max-width: 800px; text-align: center; box-shadow: 0 4px 12px rgba(220, 38, 38, 0.1);">
+        <h3 style="color: #dc2626; margin-bottom: 0.5rem; font-size: 1.25rem; font-weight: 600;">🚨 Crisis Support Available</h3>
+        <p style="color: #dc2626; font-size: 1rem; margin-bottom: 1rem; font-weight: 500;">If you are experiencing a mental health crisis or having thoughts of self-harm:</p>
+        <div style="background: white; padding: 1rem; border-radius: 8px; margin-bottom: 1rem;">
+            <p style="color: #dc2626; font-size: 1.125rem; font-weight: 700; margin: 0;">📞 Call 988 - Suicide & Crisis Lifeline</p>
+            <p style="color: #dc2626; font-size: 1rem; margin: 0.5rem 0 0 0;">Available 24/7 • Free • Confidential</p>
+        </div>
+        <p style="color: #dc2626; font-size: 0.875rem; margin: 0; opacity: 0.8;">This website is for non-emergency mental health care. For immediate crisis support, please call 988.</p>
+    </div>            <section class="hero">
             <div class="container">
                 <div class="hero-content">
                     <h1>Clarity. Confidence. Care.</h1>
