Remove PHQ-9 tracker page entirely
- Delete phq9-tracker.html and all backup files
- Remove PHQ-9 tracker links from all navigation menus
- Remove PHQ-9 tracking section from resources page
- Update meta tags and SEO content to remove PHQ-9 references
- Update sitemap.xml to remove PHQ-9 tracker page
- Clean up homepage content to remove PHQ-9 references
- Maintain crisis disclaimer boxes on all remaining pages

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     <li style="margin: 0; padding: 0;"><a href="pricing.html">Pricing</a></li>
                     <li style="margin: 0; padding: 0;"><a href="faq.html">FAQ</a></li>
                     <li style="margin: 0; padding: 0;"><a href="resources.html">Resources</a></li>
-                    <li style="margin: 0; padding: 0;"><a href="phq9-tracker.html">PHQ-9 Tracker</a></li>
+                    
                     <li style="margin: 0; padding: 0;"><a href="screening.html" class="btn btn-primary" style="background: #2C5F7C !important; color: white !important; font-weight: 700 !important; text-shadow: 0 1px 2px rgba(0, 0, 0, 0.15) !important;">Get Started</a></li>
                 </ul>
             </div>
@@ -441,7 +441,7 @@
                 
                 <div style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 16px rgba(44, 95, 124, 0.1); ">
                     <h3 style="color: var(--ocean-blue); margin-bottom: 1rem;">📊 Track Your Progress</h3>
-                    <p style="color: var(--warm-gray); margin-bottom: 1.5rem;">Monitor your mood with validated PHQ-9 assessments and share results with your care team.</p>
+                    <p style="color: var(--warm-gray); margin-bottom: 1.5rem;">Access evidence-based tools and resources to complement your treatment journey.</p>
                     <a href="resources.html" style="display: inline-flex; align-items: center; gap: 0.5rem; background: var(--gradient-primary); color: white; padding: 0.75rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: 600; transition: all 0.3s ease;">
                         Learn More
                         <span style="transition: transform 0.3s ease;">→</span>
